--- a/index.html
+++ b/index.html
@@ -1452,7 +1452,7 @@
                                     <p class="text-gray-400">Tarik USDT dan BOSSX dari wallet Anda dengan aman dan cepat</p>
                                 </div>
                                 <div class="crypto-icon-large">
-                                    <i data-lucide="arrow-up-circle" class="text-red-400 w-8 h-8"></i>
+                                    <i data-lucide="arrow-up" class="text-red-400 w-8 h-8"></i>
                                 </div>
                             </div>
                         </div>
@@ -1720,10 +1720,10 @@
                                 <!-- Owner Profile -->
                                 <div class="exchange-card p-6 text-center">
                                     <div class="w-32 h-32 mx-auto mb-4 rounded-full overflow-hidden border-4 border-amber-500">
-                                        <img src="https://via.placeholder.com/150?text=Owner" alt="Owner" class="w-full h-full object-cover">
+                                        <img src="https://i.ibb.co/gbVsGLy0/FB-IMG-1617237754232.jpg" alt="CEO" class="w-full h-full object-cover">
                                     </div>
                                     <h3 class="text-xl font-bold text-white mb-2">Fery Muliawan</h3>
-                                    <p class="text-amber-400 mb-4">Owner</p>
+                                    <p class="text-amber-400 mb-4">CEO (Chief Executive Officer)</p>
                                     <p class="text-gray-300">Pendiri dan visioner BossX, dengan pengalaman 10 tahun di industri crypto.</p>
                                 </div>
                                 <!-- Director Profile -->
