--- a/index.html
+++ b/index.html
@@ -1717,49 +1717,49 @@
                             <h1 class="text-3xl font-bold text-amber-400 mb-6">Team Developer</h1>
                             <p class="text-gray-400 mb-8">Temui tim di balik BossX Crypto Exchange Platform.</p>
                             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-                                <!-- Owner Profile -->
+                                <!-- CEO Profile -->
                                 <div class="exchange-card p-6 text-center">
                                     <div class="w-32 h-32 mx-auto mb-4 rounded-full overflow-hidden border-4 border-amber-500">
                                         <img src="https://i.ibb.co/gbVsGLy0/FB-IMG-1617237754232.jpg" alt="CEO" class="w-full h-full object-cover">
                                     </div>
-                                    <h3 class="text-xl font-bold text-white mb-2">Fery Muliawan</h3>
+                                    <h3 class="text-xl font-bold text-white mb-2">Mr.Fery Muliawan</h3>
                                     <p class="text-amber-400 mb-4">CEO (Chief Executive Officer)</p>
                                     <p class="text-gray-300">Pendiri dan visioner BossX, dengan pengalaman 10 tahun di industri crypto.</p>
                                 </div>
-                                <!-- Director Profile -->
+                                <!-- CFO Profile -->
                                 <div class="exchange-card p-6 text-center">
                                     <div class="w-32 h-32 mx-auto mb-4 rounded-full overflow-hidden border-4 border-amber-500">
                                         <img src="https://via.placeholder.com/150?text=Director" alt="Director" class="w-full h-full object-cover">
                                     </div>
-                                    <h3 class="text-xl font-bold text-white mb-2">apa yang bagus</h3>
-                                    <p class="text-amber-400 mb-4">Director</p>
+                                    <h3 class="text-xl font-bold text-white mb-2">Ms.Herni</h3>
+                                    <p class="text-amber-400 mb-4">CFO (Chief Financial Officer)</p>
                                     <p class="text-gray-300">Mengawasi operasi harian dan strategi bisnis platform.</p>
                                 </div>
-                                <!-- Manager Profile -->
+                                <!-- COO Profile -->
                                 <div class="exchange-card p-6 text-center">
                                     <div class="w-32 h-32 mx-auto mb-4 rounded-full overflow-hidden border-4 border-amber-500">
                                         <img src="https://via.placeholder.com/150?text=Manager" alt="Manager" class="w-full h-full object-cover">
                                     </div>
-                                    <h3 class="text-xl font-bold text-white mb-2">Michael Johnson</h3>
-                                    <p class="text-amber-400 mb-4">Manager</p>
+                                    <h3 class="text-xl font-bold text-white mb-2">Mr.ramadhan</h3>
+                                    <p class="text-amber-400 mb-4">COO (Chief Operating Officer)</p>
                                     <p class="text-gray-300">Mengatur tim operasional dan memastikan kelancaran platform.</p>
                                 </div>
-                                <!-- IT Profile -->
+                                <!-- CTO Profile -->
                                 <div class="exchange-card p-6 text-center">
                                     <div class="w-32 h-32 mx-auto mb-4 rounded-full overflow-hidden border-4 border-amber-500">
                                         <img src="https://via.placeholder.com/150?text=IT" alt="IT" class="w-full h-full object-cover">
                                     </div>
-                                    <h3 class="text-xl font-bold text-white mb-2">Sarah Lee</h3>
-                                    <p class="text-amber-400 mb-4">IT Specialist</p>
+                                    <h3 class="text-xl font-bold text-white mb-2">Lee</h3>
+                                    <p class="text-amber-400 mb-4">CTO (Chief Technology Officer)</p>
                                     <p class="text-gray-300">Bertanggung jawab atas infrastruktur teknis dan keamanan sistem.</p>
                                 </div>
-                                <!-- Secretary Profile -->
+                                <!-- CSO Profile -->
                                 <div class="exchange-card p-6 text-center">
                                     <div class="w-32 h-32 mx-auto mb-4 rounded-full overflow-hidden border-4 border-amber-500">
                                         <img src="https://via.placeholder.com/150?text=Secretary" alt="Secretary" class="w-full h-full object-cover">
                                     </div>
                                     <h3 class="text-xl font-bold text-white mb-2">Emily Brown</h3>
-                                    <p class="text-amber-400 mb-4">Secretary</p>
+                                    <p class="text-amber-400 mb-4">CSO (Chief Strategy Officer)</p>
                                     <p class="text-gray-300">Menangani administrasi dan komunikasi internal tim.</p>
                                 </div>
                             </div>
