--- a/index.html
+++ b/index.html
@@ -1747,7 +1747,7 @@
                                 <!-- CTO Profile -->
                                 <div class="exchange-card p-6 text-center">
                                     <div class="w-32 h-32 mx-auto mb-4 rounded-full overflow-hidden border-4 border-amber-500">
-                                        <img src="https://ibb.co.com/N2RF70Vs.jpg" alt="IT" class="w-full h-full object-cover">
+                                        <img src="https://ibb.co.com/N2RF70Vs" alt="IT" class="w-full h-full object-cover">
                                     </div>
                                     <h3 class="text-xl font-bold text-white mb-2">Lee</h3>
                                     <p class="text-amber-400 mb-4">CTO (Chief Technology Officer)</p>
