--- a/index.html
+++ b/index.html
@@ -1717,7 +1717,7 @@
                             <h1 class="text-3xl font-bold text-amber-400 mb-6">Team Developer</h1>
                             <p class="text-gray-400 mb-8">Temui tim di balik BossX Crypto Exchange Platform.</p>
                             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-                                <!-- Owner Profile -->
+                                <!-- CEO Profile -->
                                 <div class="exchange-card p-6 text-center">
                                     <div class="w-32 h-32 mx-auto mb-4 rounded-full overflow-hidden border-4 border-amber-500">
                                         <img src="https://i.ibb.co/gbVsGLy0/FB-IMG-1617237754232.jpg" alt="CEO" class="w-full h-full object-cover">
@@ -1726,13 +1726,13 @@
                                     <p class="text-amber-400 mb-4">CEO (Chief Executive Officer)</p>
                                     <p class="text-gray-300">Pendiri dan visioner BossX, dengan pengalaman 10 tahun di industri crypto.</p>
                                 </div>
-                                <!-- Director Profile -->
+                                <!-- CFO Profile -->
                                 <div class="exchange-card p-6 text-center">
                                     <div class="w-32 h-32 mx-auto mb-4 rounded-full overflow-hidden border-4 border-amber-500">
-                                        <img src="https://via.placeholder.com/150?text=Director" alt="Director" class="w-full h-full object-cover">
+                                        <img src="Chief Financial Officer" alt="Director" class="w-full h-full object-cover">
                                     </div>
                                     <h3 class="text-xl font-bold text-white mb-2">Mr.Ramadhan</h3>
-                                    <p class="text-amber-400 mb-4">Director</p>
+                                    <p class="text-amber-400 mb-4">CFO Chief Financial Officer</p>
                                     <p class="text-gray-300">Mengawasi operasi harian dan strategi bisnis platform.</p>
                                 </div>
                                 <!-- Manager Profile -->
