--- a/index.html
+++ b/index.html
@@ -1744,13 +1744,13 @@
                                     <p class="text-amber-400 mb-4">Manager</p>
                                     <p class="text-gray-300">Mengatur tim operasional dan memastikan kelancaran platform.</p>
                                 </div>
-                                <!-- IT Profile -->
+                                <!-- CIO Profile -->
                                 <div class="exchange-card p-6 text-center">
                                     <div class="w-32 h-32 mx-auto mb-4 rounded-full overflow-hidden border-4 border-amber-500">
-                                        <img src="https://via.placeholder.com/150?text=IT" alt="IT" class="w-full h-full object-cover">
+                                        <img src="https://i.ibb.co.com/N2RF70Vs/IMG-1097-removebg-preview.png" alt="CIO" class="w-full h-full object-cover">
                                     </div>
-                                    <h3 class="text-xl font-bold text-white mb-2">Sarah Lee</h3>
-                                    <p class="text-amber-400 mb-4">IT Specialist</p>
+                                    <h3 class="text-xl font-bold text-white mb-2">Lee</h3>
+                                    <p class="text-amber-400 mb-4">CIO Specialist</p>
                                     <p class="text-gray-300">Bertanggung jawab atas infrastruktur teknis dan keamanan sistem.</p>
                                 </div>
                                 <!-- Secretary Profile -->
