--- a/index.html
+++ b/index.html
@@ -1729,7 +1729,7 @@
                                 <!-- CFO Profile -->
                                 <div class="exchange-card p-6 text-center">
                                     <div class="w-32 h-32 mx-auto mb-4 rounded-full overflow-hidden border-4 border-amber-500">
-                                        <img src="Chief Financial Officer" alt="Director" class="w-full h-full object-cover">
+                                        <img src="https://i.ibb.co.com/xKDSrKYw/Picsart-25-10-03-12-44-06-927.png" alt="CFO" class="w-full h-full object-cover">
                                     </div>
                                     <h3 class="text-xl font-bold text-white mb-2">Mr.Ramadhan</h3>
                                     <p class="text-amber-400 mb-4">CFO Chief Financial Officer</p>
