--- a/index.html
+++ b/index.html
@@ -1722,7 +1722,7 @@
                                     <div class="w-32 h-32 mx-auto mb-4 rounded-full overflow-hidden border-4 border-amber-500">
                                         <img src="https://i.ibb.co.com/N2RF70Vs/IMG-1097-removebg-preview.png" alt="CEO" class="w-full h-full object-cover">
                                     </div>
-                                    <h3 class="text-xl font-bold text-white mb-2">Fery Muliawan</h3>
+                                    <h3 class="text-xl font-bold text-white mb-2">Fery Muliawan M.Tr.Kom</h3>
                                     <p class="text-amber-400 mb-4">CEO (Chief Executive Officer)</p>
                                     <p class="text-gray-300">Pendiri dan visioner BossX, dengan pengalaman 10 tahun di industri crypto.</p>
                                 </div>
@@ -1731,7 +1731,7 @@
                                     <div class="w-32 h-32 mx-auto mb-4 rounded-full overflow-hidden border-4 border-amber-500">
                                         <img src="https://i.ibb.co.com/xKDSrKYw/Picsart-25-10-03-12-44-06-927.png" alt="CFO" class="w-full h-full object-cover">
                                     </div>
-                                    <h3 class="text-xl font-bold text-white mb-2">Mr.Ramadhan</h3>
+                                    <h3 class="text-xl font-bold text-white mb-2">Mr.Ramadhan S.E</h3>
                                     <p class="text-amber-400 mb-4">CFO Chief Financial Officer</p>
                                     <p class="text-gray-300">Mengawasi operasi harian dan strategi bisnis platform.</p>
                                 </div>
